# sunlark

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  WORKSPACE.bzl
bzl/: user.bazelrc
doc/: operators.md
edit/: BUILD.bazel  edit.c
edit/scm/: ast_walk.scm  edit.scm
repl/: BUILD.bazel  repl.c
src/: BUILD.bazel  sunlark_bindings.c  sunlark_bindings_mutators.c  sunlark_ctors.c  sunlark_debug.c  sunlark_dictionaries.c  sunlark_dispatcher.c  sunlark_errors.c  sunlark_filters.c  sunlark_format.c  sunlark_functions.c  sunlark_loadstmts.c  sunlark_loadstmts_remove.c  sunlark_loadstmts_set.c  sunlark_mutators.c  sunlark_node.c  sunlark_package.c  sunlark_parsers.c  sunlark_predicators.c  sunlark_properties.c  sunlark_serializers.c  sunlark_target_mutators.c  sunlark_targets.c  sunlark_utils.c  sunlark_vector_mutators.c  sunlark_vectors.c
test/buildfiles/: BUILD.uri
test/buildfiles/haskell/: BUILD.primitive  BUILD.rts  BUILD.transformers  BUILD.vector  README.md
test/buildozer/pkg/: BUILD.bazel
test/scm/: buildozer.scm  edit.scm  loadstmts.scm  loadstmts_get.scm  loadstmts_rm.scm  loadstmts_set.scm  targets_get.scm  targets_set.scm
test/unit/sunlark/: BUILD.bazel  common.c  test_binding_get.c  test_binding_rm.c  test_binding_set.c  test_dictionary_get.c  test_formatting.c  test_loadstmts.c  test_loadstmts_get.c  test_loadstmts_rm.c  test_loadstmts_set.c  test_loadstmts_set_attrs.c  test_make_binding.c  test_packages.c  test_string_set.c  test_strings.c  test_target_get.c  test_vector_get.c  test_vector_rm.c  test_vector_set.c  test_vector_strings.c  validators.c
