load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name  = "edit",
    linkstatic = 1,
    srcs  = [
        "edit.c",
        "edit.h",
        "bazel_config.c",
        "bazel_config.h",
    ],
    data = [
        "//edit/scm:edit.scm"
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",
        "-I$(GENDIR)/edit",
        "-I$(GENDIR)/external/sunlark/edit",
        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/sunlark/src",
        "-Ivendored/linenoise",
        "-Iexternal/sunlark/vendored/linenoise",
        "-Ivendored/logc",
        "-Iexternal/sunlark/vendored/logc",
        "-Ivendored/s7",
        "-Iexternal/sunlark/vendored/s7",
        "-Ivendored/uthash",
        "-Iexternal/sunlark/vendored/uthash",
        # "-I$(GENDIR)/external/sealark/bazel"
    ],
    deps = [
        "//src:sunlark",
        "//vendored/logc",
        "//vendored/s7",
        "//vendored/uthash",
    ],
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "edit.c",
        "bazel_config.c",
    ],
    outs = [
        "edit.h",
        "bazel_config.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location edit.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location bazel_config.c) \\",
        "    $(location edit.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
