load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "repl",
    srcs  = ["repl.c", "repl.h"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",
        "-I$(GENDIR)/repl",
        "-I$(GENDIR)/external/sunlark/repl",
        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/sunlark/src",
        "-Ivendored/linenoise",
        "-Iexternal/sunlark/vendored/linenoise",
        "-Ivendored/logc",
        "-Iexternal/sunlark/vendored/logc",
        "-Ivendored/s7",
        "-Iexternal/sunlark/vendored/s7",
        "-Ivendored/uthash",
        "-Iexternal/sunlark/vendored/uthash",
        # "-I$(GENDIR)/external/sealark/bazel"
    ],
    # data = [
    #     "//repl/scm:edit.scm"
    # ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + [
        "-lm",
    ],
    deps = [
        "//src:sunlark",
        "//vendored/linenoise",
        "//vendored/s7",
        "//vendored/uthash",
        # "@sealark//bazel"
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "repl.c",
        # "@sealark//bazel:bazel_config.c",
    ],
    outs = [
        "repl.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location repl.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        # "    $(location @sealark//bazel:bazel_config.c) \\",
        "    $(location repl.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
